Fixes spacing issues on WP backend
• Adds #ohq-main id selector to:
   -- .active
   -- [class*='score-']

• Renamed style sheet from 'style.css' to 'ohq-styles.css' to help identify on browser-side debugging when styles are being applied.

--- a/ohq-styles.css
+++ b/ohq-styles.css
@@ -20,7 +20,7 @@ ag purple:  #532d6d
 grey:       #3d3935
 */
 
-.active {
+#ohq-main .active {
     display: block;
 }
 
@@ -593,7 +593,7 @@ OBJECT ELEMENTS
     font-weight: 700;
 }
 
-[class*='score-'] {
+#ohq-main [class*='score-'] {
     color: #532d6d;
     font-size: 220%;
     left: 50%;
